fix overflow in login page

--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,5 +1,4 @@
 .home {
-  padding: 2rem;
   overflow: hidden;
 }
 
